# NLog

./: Inflate.kt  README.md  build.gradle  gradle.properties
app/: CMakeCache.txt  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nier/nlogger/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nier/nlogger/: ActionDispatcher.kt  ILogHandler.kt  ISendTask.kt  LogEntry.kt  Logger.kt  MainActivity.kt  NLogger.kt  NLoggerConfig.kt  NLoggerProxy.kt
app/src/main/java/com/nier/nlogger/action/: Flush.kt  IAction.kt  Send.kt  Write.kt
app/src/main/java/com/nier/sample/: MainActivity.kt
app/src/main/jni/: native-lib.c  nlogger.c  nlogger.h  nlogger_android_log_util.h  nlogger_cache.c  nlogger_cache.h  nlogger_constants.h  nlogger_data_handler.c  nlogger_data_handler.h  nlogger_error_code.h  nlogger_file_utils.c  nlogger_file_utils.h  nlogger_json_util.c  nlogger_json_util.h  nlogger_log_file_handler.c  nlogger_log_file_handler.h  nlogger_native_interface.c  nlogger_native_interface.h  nlogger_protocol.c  nlogger_protocol.h  nlogger_utils.c  nlogger_utils.h
app/src/main/jni/cache/: nlogger_cache_handler.c  nlogger_cache_handler.h  nlogger_protocol.c  nlogger_protocol.h
app/src/main/jni/compress/: nlogger_data_handler.c  nlogger_data_handler.h
app/src/main/jni/logfile/: nlogger_log_file_handler.c  nlogger_log_file_handler.h
app/src/main/jni/utils/: nlogger_android_log.h  nlogger_file_utils.c  nlogger_file_utils.h  nlogger_utils.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nier/nlogger/: ExampleUnitTest.kt
doc/errornote/: free_error.md
doc/future/: future.md
gradle/wrapper/: gradle-wrapper.properties
nlogger-native/: CMakeLists.txt  aes_util.c  clogan_core.c  construct_data.c  logan_config.h  mmap_util.c  zlib_util.c
